our people changes

--- a/index.html
+++ b/index.html
@@ -2,7 +2,14 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/assets/meld-logo.png" />
+    <!-- <link
+      rel="icon"
+      type="image/png"
+      href="assets/favicon-96x96.png"
+      sizes="96x96"
+    /> -->
+    <!-- <link rel="icon" type="image/svg+xml" href="assets/favicon.svg" /> -->
+    <link rel="shortcut icon" href="assets/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Meld // Multi-animal Ensemble Landmark Detector</title>
   </head>
